--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,21 +11,22 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-          <% if !user_signed_in? %>
-            <li><%= link_to "Student", new_user_session_path %></li>
-            <!-- <li><%= link_to "Student Sign Up", new_user_registration_path %></li> -->
-          <% else %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
 
-              <ul class="dropdown-menu">
-                <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                <li role="separator" class="divider"></li>
-                <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-              </ul>
-            </li>
-          <% end %>
-        </ul>
+        <% if !user_signed_in? %>
+          <li><%= link_to "Log In", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "Academy 9", users_path %></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
