--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,6 +24,7 @@
               <li role="separator" class="divider"></li>
               <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
               <li><%= link_to "Academy 9", users_path %></li>
+              <li><%= link_to "Teams", teams_path %></li>
             </ul>
           </li>
         <% end %>
