--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,11 @@
 </div>
   <% if current_user.admin? %>
     <% @users.each do |user| %>
-    <p><%= link_to user.email, user_path(user.id) %></p>
+    <p><%= user.email %></p>
+    <p> Admin: <%= user.admin %>
+    <%= button_to "Change Status", users_change_status_path(@user), method: :put %>
+
+    <button type="button">Student<%= %></button>
   <% end %>
   <hr>
     <p><%= 'Users:' %> <%= User.count %> registered</p>
