--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-  <div class="panel-heading">Welcome</div>
+  <div class="panel-heading">Welcome <%= current_user.email %> </div>
 </div>
   <% if current_user.admin? %>
     <% @users.each do |user| %>
@@ -13,3 +13,4 @@
     <% else %>
     <p><%= link_to current_user.email, user_path(current_user.id) %></p>
 <% end %>
+<%= link_to "Back", root_path, class: "btn btn-default" %>
